src/snapshots/monkey_rust__parser__tests__parse_call_expression.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    Call:
      arguments: []
      function:
        Identifier: myFn
- Expression:
    Call:
      arguments:
        - Literal:
            Int: 1
        - Literal:
            Int: 2
      function:
        Identifier: myFn
- Expression:
    Call:
      arguments:
        - Literal:
            Int: 1
        - BinaryExp:
            operator: Mul
            lhs:
              Literal:
                Int: 2
            rhs:
              Literal:
                Int: 3
        - BinaryExp:
            operator: Add
            lhs:
              UnaryExpression:
                value:
                  Literal:
                    Int: 4
                operator: Oposite
            rhs:
              Literal:
                Int: 5
      function:
        Identifier: myFn
- Expression:
    Call:
      arguments:
        - Function:
            parameters: []
            body: []
      function:
        Identifier: myFn
- Expression:
    Call:
      arguments: []
      function:
        Function:
          parameters: []
          body: []
- Expression:
    Call:
      arguments:
        - Literal:
            Int: 1
      function:
        Function:
          parameters:
            - x
          body:
            - Return:
                Identifier: x
- Expression:
    UnaryExpression:
      value:
        Call:
          arguments:
            - Literal:
                Int: 1
            - Literal:
                Int: 2
          function:
            Identifier: myFn
      operator: Oposite
- Expression:
    Call:
      arguments:
        - Call:
            arguments:
              - Literal:
                  Int: 1
              - Literal:
                  Int: 2
            function:
              Function:
                parameters:
                  - a
                  - b
                body:
                  - Return:
                      BinaryExp:
                        operator: Add
                        lhs:
                          Identifier: a
                        rhs:
                          Identifier: b
      function:
        Identifier: myFn

