src/snapshots/monkey_rust__parser__tests__parse_fn_expression.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    Function:
      parameters: []
      body: []
- Expression:
    Function:
      parameters:
        - x
      body:
        - Expression:
            Identifier: x
- Expression:
    Function:
      parameters:
        - x
        - y
        - z
      body:
        - Return:
            Add:
              lhs:
                Add:
                  lhs:
                    Identifier: x
                  rhs:
                    Identifier: y
              rhs:
                Identifier: z

