src/snapshots/monkey_rust__parser__tests__parse_if_else_expression.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    If:
      condition:
        Lt:
          lhs:
            Identifier: x
          rhs:
            Identifier: y
      consequence:
        - Expression:
            Identifier: x
      alternative:
        - Expression:
            Identifier: y
- Expression:
    If:
      condition:
        Lt:
          lhs:
            Identifier: x
          rhs:
            Identifier: y
      consequence:
        - Return:
            Identifier: x
      alternative:
        - Return:
            Identifier: y
- Expression:
    If:
      condition:
        Lt:
          lhs:
            Identifier: x
          rhs:
            Identifier: y
      consequence:
        - Expression:
            Eq:
              lhs:
                Identifier: x
              rhs:
                Literal:
                  Int: 3
      alternative:
        - Expression:
            NotEq:
              lhs:
                Identifier: x
              rhs:
                Literal:
                  Int: 1

